# local-vectors

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: README.md  quickstart.py
src/local-vectors/: embedders.py  providers.py  storage.py
src/local_vectors/: __init__.py  chunking.py  embedders.py  providers.py  storage.py
tests/: README.md  conftest.py  test_core.py  test_embeddings.py  test_local_vectors.py  test_logic.py
